--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
