--- a/contact.html
+++ b/contact.html
@@ -143,6 +143,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
