--- a/about.html
+++ b/about.html
@@ -110,6 +110,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
